departure date table alignment fixed and completed

--- a/style.scss
+++ b/style.scss
@@ -233,6 +233,12 @@ $gray-900: #212529;
     border-radius: 4px;
     cursor: pointer;
   }
+  tbody .fix-departure-date-table-btn {
+    text-align: left;
+  }
+  tbody .fix-departure-date-table-btn-disable {
+    text-align: left;
+  }
 
   @media screen and (max-width: 600px) {
     table thead {
@@ -255,10 +261,12 @@ $gray-900: #212529;
     tbody .fix-departure-date-table-btn {
       width: 100%;
       background-color: $success;
+      text-align: center;
     }
     tbody .fix-departure-date-table-btn-disable {
       width: 100%;
       background-color: $secondary;
+      text-align: center;
     }
   }
 }
